plugins {
	id("org.springframework.boot") version("3.4.3")
	id("java")
}

version = '1.0.2'
group = 'org.gradle.samples'

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

repositories {
	mavenCentral()
}

dependencies {
    implementation(platform("org.springframework.boot:spring-boot-dependencies:3.4.3"))
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework:spring-web'

    implementation("org.springframework.boot:spring-boot-starter-web")
    implementation "org.springframework.boot:spring-boot-starter-security"
    implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
    implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'

    testImplementation("org.springframework.boot:spring-boot-starter-test")
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    testImplementation 'org.mockito:mockito-core:5.2.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0' // For MockitoJUnitRunner

    implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
    implementation 'org.javassist:javassist:3.29.2-GA'
    
    runtimeOnly 'org.apache.logging.log4j:log4j-core:2.17.1'

    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
    runtimeOnly 'mysql:mysql-connector-java:8.0.33'
    testRuntimeOnly 'mysql:mysql-connector-java:8.0.33'
}

test {
    environment("dbhostname", "localhost")
    environment("dbname", "abbot")
    environment("dbuser", "abbot")
    environment("dbpassword", "abbotpass")
    useJUnitPlatform()
}
